# mmn-17-computer-graphics

./: .gitignore  CMakeLists.txt  Dog.cpp  Dog.h  README.md  blockedSquare.cpp  blockedSquare.h  dog.cpp  dog.h  example.c  floor.cpp  floor.h  items.cpp  items.h  lamp.cpp  lamp.h  main.cpp  menu.cpp  menu.h  room.cpp  room.h  stb_image.h  window.cpp  window.h  מדריך בקרים.docx
imgui/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_freeglut.cpp  imgui_impl_freeglut.h  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_internal.h  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
imgui/include/: imgui.h  stb_rect_pack.h  stb_truetype.h
imgui/lib/: imgui.lib
imgui/misc/fonts/: binary_to_compressed_c.cpp
imgui/misc/freetype/: imgui_freetype.cpp  imgui_freetype.h
resources/: מדריך בקרים.docx
src/: blockedSquare.h  dog.cpp  dog.h  floor.cpp  floor.h  items.cpp  items.h  lamp.cpp  lamp.h  main.cpp  menu.cpp  menu.h  pch.cpp  pch.h  room.cpp  room.h  stb_image.cpp  stb_image.h  window.cpp  window.h
